fix(phase2-contract): close C0 contract and acceptance gaps